# voice2midi

./: .gitignore  CMakeLists.txt  README.md  build.sh  project.md  refactor.md  run_tests.sh  test_dsp.cpp  testing.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: CalibrationManager.cpp  CalibrationManager.h  CircularBuffer.h  DrumClassifier.h  EnvelopeFollower.h  MedianFilter.h  NoiseRejecter.h  OnsetDetector.h  ScaleQuantizer.h  SpectralAnalyzer.h  YinPitchDetector.cpp  YinPitchDetector.h
Source/MIDI/: MidiEventGenerator.cpp  MidiEventGenerator.h
Source/Tests/: CircularBufferTests.cpp  MidiEventGeneratorTests.cpp  TestRunner.cpp  YinPitchDetectorTests.cpp
Source/UI/: AudioVisualFifo.h  HUDDisplay.cpp  HUDDisplay.h  TimbreMeter.h  WaveformVisualizer.cpp  WaveformVisualizer.h
